Small fix to make mail to more visible

--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -15,6 +15,10 @@ a {
     color: #ffffff !important;
 }
 
+a.mail:link {color:#ffff80 !important;}
+a.mail:visited {color:#ffff80 !important;}
+a.mail:hover {color:#ffff80 !important;}
+
 .blueborder {
     border-color: #5C6CAA;
 }
